@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.4.0">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.4.1">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -27,8 +27,10 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.4.0 [20230803]:
-- Added Four New Icon Packs
+Changelog 0.4.1 [20230804]:
+- Separated Providers
+- Fixed Season Guessing
+- Fixed Animetosho Searching
     </news>
   </extension>
 </addon>
