@@ -1,3 +1,8 @@
+Changelog 0.4.1 [20230804]:
+- Separated Providers
+- Fixed Season Guessing
+- Fixed Animetosho Searching
+
 Changelog 0.4.0 [20230803]:
 - Added Four New Icon Packs
 
